--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Add Student</title>
+    <title>Register as a Student</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 
     <meta charset="UTF-8" />
@@ -103,7 +103,7 @@
           class="header-image"
         />
         <div class="header-text-container">
-          <h1 class="header-title">Add Students</h1>
+          <h1 class="header-title">Register as a Student</h1>
         </div>
       </div>
     </header>
@@ -111,12 +111,10 @@
       <div class="description-container">
         <div class="description-text-container">
           <p class="description-text">
-            By adding your projects to our platform, you can provide valuable
-            opportunities for students to gain real-world experience and
-            showcase their skills. Don't miss out on the chance to mentor and
-            collaborate with the next generation of talent. Add your projects
-            today and empower students to learn, grow, and contribute to your
-            company's success!
+            Are you a higher education student eager to boost your "Industry
+            Readiness" and develop future-ready IT skills? We're here to support
+            you! Complete the registration form below, and let's embark on this
+            journey together. We're excited to help you achieve your goals!
           </p>
         </div>
       </div>
@@ -195,18 +193,20 @@
           <input value="" name="Student_Degree" id="degree" />
         </div>
         <div class="form-group full-width">
-          <label>Student University :</label>
-          <input value="" name="Student_University" id="university" />
+          <label><span class="mandatory"></span>Student University :</label>
+          <input value="" name="Student_University" id="university" required />
         </div>
         <div class="form-group full-width">
           <label
-            >Long Description : (explain your skills and skills you'd like to
-            improve - technical, soft skills)</label
+            ><span class="mandatory"></span>Skills Description: (Tell us about
+            your skills and areas you'd like to improve – both technical
+            and soft skills)</label
           >
           <textarea
             value=""
             name="Long_Description"
             id="description"
+            required
           ></textarea>
         </div>
         <div class="form-group full-width">
