--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
                 Register
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Register as a Student</a>
+                <a class="dropdown-item" href="index.html"
+                  >Register as a Student</a
+                >
                 <a class="dropdown-item" href="#">Register as a Mentor</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Apply Now</a>
+              <a class="nav-link" href="view-projects.html">Apply Now</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Add Project</a>
