--- a/view-projects.html
+++ b/view-projects.html
@@ -107,20 +107,25 @@
       <div class="description-container">
         <div class="description-text-container">
           <p class="description-text">
-            As a student, you have the opportunity to explore a wide range of
-            exciting projects and collaborate with top companies in the
-            industry. Don't miss out on the chance to gain valuable experience,
-            build your portfolio, and make meaningful connections in the
-            industry. Select your favorite projects and start bidding today!
+            <span class="italic-text">
+              "The only way to do great work is to love what you do."
+            </span>
+            - Steve Jobs -
+          </p>
+          <p class="description-text">
+            Welcome to our pool of projects! Explore a diverse range of
+            opportunities spanning web development, data analysis, and more.
+            Submit your expression of interest (EOI) to embark on an enriching
+            journey of learning and discovery. Join us in solving problems!
           </p>
         </div>
       </div>
     </section>
-    <div class="header-buttons-container">
+    <!-- <div class="header-buttons-container">
       <a href="#">
         <button class="header-button">Add New Project</button>
       </a>
-    </div>
+    </div> -->
     <section class="search-bar">
       <!-- Search bar -->
       <input type="text" id="search-bar" placeholder="Search projects..." />
