--- a/expression-of-interest.html
+++ b/expression-of-interest.html
@@ -61,15 +61,13 @@
           data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div
           class="collapse navbar-collapse justify-content-end"
-          id="navbarSupportedContent"
-        >
+          id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link active" href="#"
@@ -84,15 +82,16 @@
                 role="button"
                 data-toggle="dropdown"
                 aria-haspopup="true"
-                aria-expanded="false"
-              >
+                aria-expanded="false">
                 Register
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="index.html"
                   >Register as a Student</a
                 >
-                <a class="dropdown-item" href="#">Register as a Mentor</a>
+                <a class="dropdown-item" href="add-mentor.html"
+                  >Register as a Mentor</a
+                >
               </div>
             </li>
             <li class="nav-item">
