--- a/index.html
+++ b/index.html
@@ -10,22 +10,18 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/add-student.css" />
@@ -45,15 +41,13 @@
           data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div
           class="collapse navbar-collapse justify-content-end"
-          id="navbarSupportedContent"
-        >
+          id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link active" href="#"
@@ -68,15 +62,16 @@
                 role="button"
                 data-toggle="dropdown"
                 aria-haspopup="true"
-                aria-expanded="false"
-              >
+                aria-expanded="false">
                 Register
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="index.html"
                   >Register as a Student</a
                 >
-                <a class="dropdown-item" href="#">Register as a Mentor</a>
+                <a class="dropdown-item" href="add-mentor.html"
+                  >Register as a Mentor</a
+                >
               </div>
             </li>
             <li class="nav-item">
@@ -102,8 +97,7 @@
         <img
           src="images/student-2.jpg"
           alt="Tech Projects"
-          class="header-image"
-        />
+          class="header-image" />
         <div class="header-text-container">
           <h1 class="header-title">Register as a Student</h1>
         </div>
@@ -136,8 +130,7 @@
             type="text"
             value=""
             name="NIC_Number"
-            id="nic-number"
-          />
+            id="nic-number" />
           <section class="hidden-section" id="warning-message">
             <p>Please use a different NIC number.</p>
           </section>
@@ -149,8 +142,7 @@
             type="text"
             value=""
             name="First_Name"
-            id="first-name"
-          />
+            id="first-name" />
         </div>
         <div class="form-group">
           <label><span class="mandatory"></span>Last Name:</label>
@@ -159,8 +151,7 @@
             type="text"
             value=""
             name="Last_Name"
-            id="last-name"
-          />
+            id="last-name" />
         </div>
         <div class="form-group">
           <label><span class="mandatory"></span>Mobile No 1:</label>
@@ -169,8 +160,7 @@
             type="number"
             value=""
             name="Mobile_1"
-            id="mobile-1"
-          />
+            id="mobile-1" />
         </div>
         <div class="form-group">
           <label>Mobile No 2:</label>
@@ -183,8 +173,7 @@
             type="email"
             value=""
             name="Email_Address"
-            id="Email_Address"
-          />
+            id="Email_Address" />
         </div>
         <div class="form-group full-width">
           <label>Student Address :</label>
@@ -208,8 +197,7 @@
             value=""
             name="Long_Description"
             id="description"
-            required
-          ></textarea>
+            required></textarea>
         </div>
         <div class="form-group full-width">
           <label for="attach"><span class="mandatory"></span>Add CV:</label>
@@ -218,14 +206,12 @@
             type="file"
             class="form-control cv-upload"
             id="attach"
-            name="attach"
-          />
+            name="attach" />
         </div>
         <input
           value="Submit"
           class="submit-button header-button"
-          type="submit"
-        />
+          type="submit" />
       </form>
     </section>
     <div class="loading-container">
@@ -251,23 +237,19 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script src="js/add-student.js"></script>
   </body>
 </html>
