--- a/add-mentor.html
+++ b/add-mentor.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Add Menotor</title>
+    <title>Be a mentor</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/add-mentor.css" />
@@ -95,10 +92,9 @@
         <img
           src="images/mentor-2.jpg"
           alt="Tech Projects"
-          class="header-image"
-        />
+          class="header-image" />
         <div class="header-text-container">
-          <h1 class="header-title">Add Mentors</h1>
+          <h1 class="header-title">Be a mentor</h1>
         </div>
       </div>
     </header>
@@ -106,19 +102,22 @@
       <div class="description-container">
         <div class="description-text-container">
           <p class="description-text">
-            By joining our mentorship program, you can make a lasting impact on
-            the next generation of talent. Share your expertise and guide
-            students in their journey to success. Don't miss the opportunity to
-            shape future professionals and give back to your industry. Become a
-            mentor today and help students learn, grow, and thrive, all while
-            enriching your own professional journey.
+            Join our mentorship program and make a lasting impact on the next
+            generation of talent. Share your expertise and guide students on
+            their journey to success. Seize the opportunity to shape future
+            professionals and give back to your industry. Become a mentor today
+            and help students learn, grow, and thrive, all while enhancing your
+            own professional journey
           </p>
         </div>
       </div>
     </section>
     <section class="add-mentor-container">
       <form class="add-mentor-form">
-        <div class="form-group full-width">
+        <div class="mandatory-container container">
+          <p><span class="mandatory"></span>Mandatory Fields</p>
+        </div>
+        <!-- <div class="form-group full-width">
           <label for="nic">NIC Number:</label>
           <input type="text" id="nic " name="NIC" required />
           <section class="hidden-section">
@@ -127,43 +126,49 @@
               different NIC number.
             </p>
           </section>
-        </div>
+        </div> -->
+        <section class="hidden-section">
+          <p>
+            Error: The NIC number you entered already exists. Please use a
+            different NIC number.
+          </p>
+        </section>
         <div class="form-group">
-          <label for="first-name">First Name:</label>
+          <label for="first-name"><span class="mandatory"></span>First Name:</label>
           <input type="text" id="first-name" name="FName" required />
         </div>
         <div class="form-group">
-          <label for="last-name">Last Name:</label>
+          <label for="last-name"><span class="mandatory"></span>Last Name:</label>
           <input type="text" id="last-name" name="Lname" required />
         </div>
         <div class="form-group">
-          <label for="mentor-mobile1">Mobile No 1:</label>
+          <label for="mentor-mobile1"><span class="mandatory"></span>Mobile No:</label>
           <input type="number" id="mentor-mobile1" name="Mobile1" required />
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="mentor-mobile2">Mobile No 2:</label>
           <input type="number" id="mentor-mobile2" name="Mobile2" />
-        </div>
+        </div> -->
         <div class="form-group">
           <label for="contact-email">Contact Email:</label>
-          <input type="email" id="contact-email" name="Email" required />
+          <input type="email" id="contact-email" name="Email" />
         </div>
         <div class="form-group">
-          <label for="linkedin">Mentor's LinkedIn Profile:</label>
+          <label for="linkedin">LinkedIn Profile:</label>
           <input type="url" id="linkedin" name="LinkedIn" />
         </div>
-        <div class="form-group full-width">
+        <!-- <div class="form-group full-width">
           <label for="company">Company/Organization:</label>
           <input type="text" id="company" name="Company" required />
-        </div>
+        </div> -->
         <div class="form-group full-width">
-          <label for="industry">Mentor's Expertise/Industry:</label>
-          <textarea id="industry" name="Industry" required></textarea>
+          <label for="industry">Tell us a little about your expertise, interest areas:</label>
+          <textarea id="industry" name="Industry"></textarea>
         </div>
-        <div class="form-group full-width">
+        <!-- <div class="form-group full-width">
           <label for="interest-area">Areas of Mentorship Interest:</label>
           <textarea id="interest-area" name="Interest_Area" required></textarea>
-        </div>
+        </div> -->
         <div class="form-group full-width">
           <button type="submit" class="submit-button header-button">
             Submit
@@ -186,18 +191,15 @@
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script src="js/add-mentor.js"></script>
   </body>
 </html>
